--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^7.3.1",
-    "yes": "^1.1.1"
+    "mongoose": "^7.3.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   }
-
 }
